--- a/[CP] ModThai - IB/manifest.json
+++ b/[CP] ModThai - IB/manifest.json
@@ -1,8 +1,8 @@
 {
-    "Name": "Stardew Valley - THAI",
-    "Author": "Translator Army x 'ELL",
-    "Version": "2.0.6",
-    "Description": "Thai Language For Stardew Valley 1.5.4",
-    "UniqueID": "TranslatorArmy.ModTH",
-    "UpdateKeys": [ "Nexus:7052" ]
+    "Name": "Item Bags - THAI",
+    "Author": "Translator seiji",
+    "Version": "1.0.0",
+    "Description": "Thai Language For Item Bags 1.5.3",
+    "UniqueID": "seiji.Item_Bags",
+    "UpdateKeys": [ "Nexus:10085" ]
 }
