--- a/ItemBags thai 1.0.0/[CP] ModThai - IB/manifest.json
+++ b/ItemBags thai 1.0.0/[CP] ModThai - IB/manifest.json
@@ -3,7 +3,12 @@
     "Author": "Translator seiji",
     "Version": "1.0.0",
     "Description": "Thai Language For Item Bags 1.5.3",
-    "UniqueID": "seiji.Item_Bags",
-    "EntryDll": "ItemBags.dll",
-    "UpdateKeys": [ "Nexus:10085" ]
+    "UpdateKeys": [ "Nexus:10085" ],
+    "Dependencies": [
+        { "UniqueID":"SlayerDharok.Item_Bags"},
+        { "UniqueID": "spacechase0.JsonAssets",
+          "IsRequired": false},
+        {"UniqueID": "Platonymous.Toolkit",
+          "IsRequired": true}
+      ]
 }
